# cctchaz

./: .gitignore  README.md  bun.lockb  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Button.tsx
